# nazm-lang

./: Cargo.toml  README.md
editor-support/: nazm.lang
nazm-spec/src/: SUMMARY.md  expressions.md  types.md
nazm-spec/src/expressions/: arrays_expressions.md  call_expressions.md  fields_expressions.md  indexing_expressions.md  lambda_expressions.md  operators_expressions.md  paths_expressions.md  struct_expressions.md  tuples_expressions.md
nazm-spec/src/tokens/: chars_and_strings.md  keywords.md  punctuation.md
nazmc_ast/src/: item.rs  lib.rs  typ.rs
nazmc_codegen_llvm/: Cargo.toml
nazmc_codegen_llvm/src/: fns.rs  lib.rs  operand.rs  rvalue.rs  stm.rs  types.rs  util.rs
nazmc_codegen_qbe/: Cargo.toml
nazmc_codegen_qbe/src/: lib.rs
nazmc_data_pool/: Cargo.toml
nazmc_data_pool/src/: lib.rs
nazmc_lexer/src/: lib.rs  token.rs
nazmc_lexer/src/lexing_methods/: numbers.rs
nazmc_nir/: Cargo.toml
nazmc_nir/src/: fmt.rs  lib.rs  nir_analyzer.rs
nazmc_nir/src/abi/: mod.rs
nazmc_nir/src/codegen/: llvm.rs  qbe.rs
nazmc_nir_interpreter/: Cargo.toml
nazmc_nir_interpreter/src/: lib.rs  mem.rs
nazmc_parser/src/: ast_validator.rs  lib.rs
nazmc_parser/src/syntax/: item.rs  terminal.rs  typ.rs
nazmc_parser/src/syntax/expr/: control_flow.rs  mod.rs
nazmc_resolve/src/: lib.rs
nazmc_semantics/: Cargo.toml
nazmc_semantics/src/: consts.rs  errors.rs  exprs.rs  lib.rs  nir_builder.rs  type_infer.rs  type_var_check.rs  typed_ast.rs  types.rs
qbe-rs/src/: lib.rs  tests.rs
src/: main.rs
